attempt to fix height on mobile

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -13,7 +13,8 @@
   padding: 80px;
 
   &__first {
-    height: 100vh;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
     overflow: hidden;
     position: relative;
     background: transparent;
